@@ -1,5 +1,5 @@
 {
-  "timestamp" : "2022-09-25T16:22:42Z",
+  "timestamp" : "2022-09-26T01:53:17Z",
   "count_outdated" : 347,
   "uniques_outdated" : 184,
   "count" : 380,
@@ -7,7 +7,7 @@
   "clones" : [
     {
       "timestamp": "2022-09-12T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -98,8 +98,8 @@
     },
     {
       "timestamp": "2022-09-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
