@@ -1,3 +1,11 @@
+2022-09-26T01:53:17Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3124545935
+* notice: last 14d: unq all: 2 33
+* notice: prev accum: outdated-unq outdated-all / unq all: 184 347 / 205 380
+* notice: next accum: outdated-unq outdated-all / unq all: 184 347 / 205 380
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -1 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-09-12 2022-09-25]
+
 2022-09-25T16:22:42Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3122850372
 * notice: last 14d: unq all: 2 33
